Bug 95133 - X-COM Enemy Within crashes when entering tactical mission with Bonaire
Summary: X-COM Enemy Within crashes when entering tactical mission with Bonaire
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/radeonsi (show other bugs)
Version: 11.2
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Default DRI bug account
QA Contact: Default DRI bug account
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-25 15:57 UTC by Juho-Mikko Pellinen
Modified: 2016-04-29 16:53 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
apitrace from the starting of the game until entering of a tactical mission and subsequent crash (11.88 MB, text/plain)
2016-04-25 15:57 UTC, Juho-Mikko Pellinen
Details
Steam log (16.72 KB, text/plain)
2016-04-25 16:11 UTC, Juho-Mikko Pellinen
Details
Kernel dmesg (72.74 KB, text/plain)
2016-04-25 16:12 UTC, Juho-Mikko Pellinen
Details
Glxinfo (98.48 KB, text/plain)
2016-04-25 16:12 UTC, Juho-Mikko Pellinen
Details
uname -a (138 bytes, text/plain)
2016-04-25 16:12 UTC, Juho-Mikko Pellinen
Details
Fix a stack explosion (3.29 KB, patch)
2016-04-25 23:48 UTC, Nicolai Hähnle
Details | Splinter Review

Description Juho-Mikko Pellinen 2016-04-25 15:57:35 UTC
Created attachment 123246 [details]
apitrace from the starting of the game until entering of a tactical mission and subsequent crash

X-Com Enemy Within from Steam crashes when entering a tactical mission. The globe part of the game works just fine. This happens with AMD Radeon R7 360 gpu which I just installed. I had previously HD5750 (Juniper) which ran the game just fine. The crash happens always when entering a tactical mission.

Apitrace and other logs are attached.

I'm running Gentoo.

Installed package versions:
x11-drivers/xf86-video-amdgpu 1.1.0
media-libs/mesa 11.2.1
kernel 4.5.1
x11-base/xorg-server 1.18.3
x11-libs/libdrm 2.4.67
Comment 1 Juho-Mikko Pellinen 2016-04-25 16:11:57 UTC
Created attachment 123251 [details]
Steam log
Comment 2 Juho-Mikko Pellinen 2016-04-25 16:12:26 UTC
Created attachment 123252 [details]
Kernel dmesg
Comment 3 Juho-Mikko Pellinen 2016-04-25 16:12:45 UTC
Created attachment 123253 [details]
Glxinfo
Comment 4 Juho-Mikko Pellinen 2016-04-25 16:12:59 UTC
Created attachment 123254 [details]
uname -a
Comment 5 Nicolai Hähnle 2016-04-25 17:50:53 UTC
Juho-Mikko, thank you for the report. Unfortunately, the apitrace you attached is of the pre-game launcher and not of the game itself. There should be a separate, much larger trace file of the game itself. It should be too large to attach in Bugzilla, use e.g. Google Drive.

That said, I can reproduce the crash here with my local copy of the game.
Comment 6 Nicolai Hähnle 2016-04-25 23:48:31 UTC
Created attachment 123257 [details] [review]
Fix a stack explosion

The attached patch should fix the problem. I'm just waiting on hearing back on another bug report that most likely has the same root cause.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.